# ocr_ids

./: .gitignore  README.md  pyproject.toml  remote.env.example
configs/: canonicalization_v1.json  train_flat_l20x4.yaml  train_l20x6.yaml  train_mvp.yaml  train_remote_smoke.yaml
docs/: ANNOTATION_GUIDE.md  DATA_SPEC.md  PHASE1_PLAN.md  TRAINING_REPORT_2026-07-16.md
examples/: labels.jsonl
label_studio/: README.md  flat_structure_v1.xml
scripts/: audit_dataset.py  canonicalize_dataset.py  create_label_studio_tasks.py  filter_flat_structure_scope.py  filter_font_coverage.py  holdout_font_samples.py  import_cjkvi.py  remote_bootstrap.sh  remote_fetch_fonts.sh  remote_fetch_sources.sh  remote_label_studio.sh  remote_render_v1.sh  remote_sync.sh  remote_train_l20x6.sh  render_dataset.py  smoke_ddp.py  split_dataset.py  train.py
src/ocr_ids/: __init__.py  canonical.py  cli.py  dataset.py  ids.py  inference.py  preprocess.py  structure_scope.py  vocab.py  web.py
src/ocr_ids/models/: __init__.py  vision_ids.py
tests/: test_canonicalize.py  test_dataset.py  test_ids.py  test_inference_scope.py  test_preprocess.py  test_structure_scope.py
